@@ -1,3 +1,7 @@
+
+Updated README.md file.
+Renamed verb notify with dispatch in all methods.
+
 0.1.0 - 23-10-2013
 
 First commit.
